added link to npm replica

--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://omkarvashistha.github.io/npm.replica.github.io/"
                 >
                   See Live
                 </a>
