added new things

--- a/src/index.html
+++ b/src/index.html
@@ -70,12 +70,12 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
 
-                I am currently a Senior Systems Engineer at Infosys with 1 year of experience in back-end, I have also cleared the power programmer test
-                in Infosys which is a very special role that only few candidates get and in that role I will be 
+                I am currently Specialist Programmer at Infosys with 2 year of experience in software development, I have also cleared the power programmer test
+                in Infosys which is a very special role that only few candidates get and in that role I am 
                 A Full Stack MERN Developer.<br>
                 I have very good logical skills and I am proficient in Data Structures and Algorithms and I also have very good communication skills.<br><br>
-                This is my another portfolio where I am showcasing my front-end skills here I will put my those
-                websites that I replicated and try to make the replica as close to the original.<br>               
+                This is my another portfolio where I am showcasing my development and front-end skills here I will put my those
+                websites that I have developed and some I have replicated and I tried to make the replica as close to the original.<br>               
               </p>
               <p class="about-wrapper__info-text">
                 I like coding and reading books. Coding for me like a cup of tea for indians without it my day does not go well 😁
@@ -85,7 +85,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="assets/Final resume.pdf"
                 >
                   View Resume
                 </a>
@@ -103,7 +103,49 @@
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
 
-          <!-- Notice: each .row is a project -->
+          <!-- NOTE: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Daily Progress</h3>
+                <div>
+                  <p class="mb-4">
+                    This is a productivity application that heps you improve your productivity by making you set goals and tracking your progress each week
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://venerable-selkie-0ea268.netlify.app"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/dailyprogress.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- NOTE: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
