--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://venerable-selkie-0ea268.netlify.app"
+                  href="https://daily-progress-proj.netlify.app/"
                 >
                   See Live
                 </a>
