added new project split karcha

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
 
-                I am currently Specialist Programmer at Infosys with 2 year of experience in software development, I have also cleared the power programmer test
+                I am currently Specialist Programmer at Infosys with 3 year of experience in software development, I have also cleared the power programmer test
                 in Infosys which is a very special role that only few candidates get and in that role I am 
                 A Full Stack MERN Developer.<br>
                 I have very good logical skills and I am proficient in Data Structures and Algorithms and I also have very good communication skills.<br><br>
@@ -102,6 +102,49 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
+
+          <!-- NOTE: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Split karcha</h3>
+                <div>
+                  <p class="mb-4">
+                    This is an expense sharing full stack application that helps user split the expenses among there friends and shows the record,
+                    user can have multiple groups and friends
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://splitkarcha.netlify.app/"
+                >
+                  See Live
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/Split-karcha.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
 
           <!-- NOTE: each .row is a project -->
           <div class="row">
