added new project split karcha

--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
                 <h3 class="project-wrapper__text-title">Split karcha</h3>
                 <div>
                   <p class="mb-4">
-                    This is an expense sharing full stack application that helps user split the expenses among there friends and shows the record,
+                    This is an expense tracking and sharing full stack application that helps user split the expenses among there friends and shows the record,
                     user can have multiple groups and friends
                   </p>
                 </div>
