changes made to main page

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-
-    <!-- Todo: put here your site title -->
     <title>Omkar Vashistha</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="[omkarvashistha], [omkar vashistha], javascript , react , front-end" />
     <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="[Omkar vashistha] | Developer | Portfolio" />
 
     <link
       rel="stylesheet"
@@ -24,11 +22,8 @@
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
 
-    <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
-  <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
@@ -38,7 +33,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Omkar vashistha</span>
           <br />
-          I am a Developer.
+          I am a Web Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -70,12 +65,9 @@
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
 
-                I am currently Specialist Programmer at Infosys with 3 year of experience in software development, I have also cleared the power programmer test
-                in Infosys which is a very special role that only few candidates get and in that role I am 
+                I am currently Specialist Programmer at Infosys with 3 year of experience in software development, I am 
                 A Full Stack MERN Developer.<br>
-                I have very good logical skills and I am proficient in Data Structures and Algorithms and I also have very good communication skills.<br><br>
-                This is my another portfolio where I am showcasing my development and front-end skills here I will put my those
-                websites that I have developed and some I have replicated and I tried to make the replica as close to the original.<br>               
+                I have very good logical skills and I am proficient in Data Structures and Algorithms and I also have very good communication skills.<br><br>               
               </p>
               <p class="about-wrapper__info-text">
                 I like coding and reading books. Coding for me like a cup of tea for indians without it my day does not go well 😁
@@ -421,7 +413,7 @@
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto: omkarvashistha90@gmail.com"
-            >Call to Action</a
+            >Contact Me</a
           >
         </div>
       </div>
@@ -449,7 +441,7 @@
         <hr />
 
         <p class="footer__text">
-          © 2022 - Special Thanks to Jacobo Martínez
+          © 2024 - Made with love ❤️
         </p>
 
         <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
