--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/Final resume.pdf"
+                  href="assets/resume.pdf"
                 >
                   View Resume
                 </a>
@@ -88,6 +88,51 @@
       </div>
     </section>
     <!-- /END About Section -->
+
+    <!-- **** Experience Section **** -->
+
+    <section class="experience">
+      <div class="container">
+        <h2 class="section-title load-hidden">Experience</h2>
+        <div class="timeline">
+          <div class="timeline-item left">
+            <div class="content">
+              <h3 class="title">Specialist Programmer</h3>
+              <p>Infosys, 2023 - Current</p>
+              <p>Full stack developer (MERN) working on front-end of apple online store.</p>
+            </div>
+            <div class="logo">
+              <img src="assets/infyLogo.png" alt="Company Logo 1" />
+            </div>
+          </div>
+
+          <div class="timeline-item right">
+            <div class="content">
+              <h3 class="title">Senior System Engineer</h3>
+              <p>Infosys, 2022 - 2023</p>
+              <p>Back-end developer working with C#, .Net and SQL. 
+                Created multiple APIs that resulted in 20% faster response times  </p>
+            </div>
+            <div class="logo">
+              <img src="assets/infyLogo.png" alt="Company Logo 1" />
+            </div>
+          </div>
+          <!-- Add more items as needed -->
+          <div class="timeline-item left">
+            <div class="content">
+              <h3 class="title">Systems Engineer</h3>
+              <p>Infosys, 2021 - 2022</p>
+              <p>Worked as a full stack developer (angular, c# , .Net)
+                 Developed and wrote 10 stored procedures that streamlined overall workflow, increasing productivity rates by 20%.</p>
+            </div>
+            <div class="logo">
+              <img src="assets/infyLogo.png" alt="Company Logo 1" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
 
     <!-- **** Projects Section **** -->
     <section id="projects">
